<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GSAK for Locus</string>
    <string name="load_from_gsak">Load GSAK geocaches</string>
    <string name="pref_path">Path settings</string>
    <string name="pref_db_title">First GSAK database path</string>
    <string name="pref_use_db">Use first GSAK database</string>
    <string name="pref_db2_title">Second GSAK database path</string>
    <string name="pref_use_db2">Use second GSAK database</string>
    <string name="pref_db3_title">Third GSAK database path</string>
    <string name="pref_use_db3">Use third GSAK database</string>
    <string name="pref_db_sum">Path to first GSAK file (*.db3 file)</string>
    <string name="pref_db2_sum">Path to second GSAK file (*.db3 file)</string>
    <string name="pref_db3_sum">Path to third GSAK file (*.db3 file)</string>
    <string name="pref_db_pick_title">Pick database file</string>
    <string name="pref_filter">Filter settings</string>
    <string name="pref_type_screen_title">Geocache type</string>
    <string name="pref_type_screen_sum">Filter checked types</string>
    <string name="pref_nick_title">Nickname on geocaching.com</string>
    <string name="pref_nick_sum">For recognize own geocaches</string>
    <string name="pref_disable_title">Disabled geocaches</string>
    <string name="pref_disable_sum">Load disabled geocaches to Locus</string>
    <string name="pref_found_title">My found geocaches</string>
    <string name="pref_notfound_title">My not found geocaches</string>
    <string name="pref_found_sum">Load my found geocaches to Locus</string>
    <string name="pref_notfound_sum">Load my not (yet) found geocaches to Locus</string>
    <string name="pref_own_title">My own geocaches</string>
    <string name="pref_own_sum">Load my own geocaches to Locus</string>
    <string name="pref_own_fill">Fill geocaching.com nickname to enable</string>
    <string name="pref_archive_title">Archived geocaches</string>
    <string name="pref_archive_sum">Load archived geocaches to Locus</string>
    <string name="pref_logs_title">Logs count</string>
    <string name="pref_logs_sum">Number of last logs, which Locus loads from GSAK database</string>
    <string name="pref_logs_error">Count of logs must be number between 0 and 999</string>
    <string name="pref_radius_title">Distance radius</string>
    <string name="pref_radius_sum">Distance radius in km for load geocaches to Locus</string>
    <string name="pref_radius_error">Radius must be number between 1 and 9999</string>
    <string name="pref_limit_title">Geocache count</string>
    <string name="pref_limit_sum">Count of geocaches to load. If value equals 0, limit will not be applied (unlimited)</string>
    <string name="pref_limit_error">Limit must be number between 0 (no limit) and 99999</string>
    <string name="pref_locus">Locus settings</string>
    <string name="pref_import_title">Show import dialog in Locus</string>
    <string name="pref_import_sum">Allow import geocaches to Locus</string>
    <string name="pref_center_title">Center map on imported geocaches</string>
    <string name="pref_center_sum">Center the map in Locus after importing the geocaches</string>
    <string name="pref_livemap_title">Live map</string>
    <string name="pref_livemap_sum">Live loading caches to map (enable in Locus: Settings → Miscellaneous → Connect with add-ons)</string>
    <string name="pref_consider_wps">Consider WPs and original coordinates</string>
    <string name="pref_consider_wps_summary">Also consider all waypoints and corrected coordinates</string>
    <string name="loading">Loading</string>
    <string name="geocaches">geocaches</string>
    <string name="databases">databases</string>
    <string name="loading_dots">Loading…</string>
    <string name="error">Error!</string>
    <string name="out_of_memory">Out of memory! Change filter to decrease geocache count!</string>
    <string name="no_db_file">GSAK database not found! Set it!</string>
    <string name="no_sqlite_database">File is not a GSAK database!</string>
    <string name="no_db_activated">GSAK for Locus: No database selected!</string>
    <string name="no_geocaches_loaded">No geocaches match the filter criteria!</string>
    <string name="unable_to_load_detail">Unable to load geocache details!</string>
    <string name="canceled">Loading canceled!</string>
    <string name="pref_columns_sum">Additional details to send to Locus in a separate log entry</string>
    <string name="pref_details_cat">Details</string>
    <string name="permission_needed_title">Permission necessary</string>
    <string name="permission_needed_text">GSAK for Locus will not work if the permission to read external files is not granted. Please grant the permission.</string>
    <string name="no_permission">GSAK for Locus cannot read database. Permission required!</string>
    <string name="pref_columns_cat">Database tables and columns</string>
    <string name="pref_type_corrected">Always load caches with corrected coordinates</string>
    <string name="pref_type_traditional" translatable="false">Traditional Cache</string>
    <string name="pref_type_multi" translatable="false">Multi-Cache</string>
    <string name="pref_type_mystery" translatable="false">Mystery Cache</string>
    <string name="pref_type_earth" translatable="false">Earth Cache</string>
    <string name="pref_type_letter" translatable="false">Letterbox Hybrid</string>
    <string name="pref_type_event" translatable="false">Event Cache</string>
    <string name="pref_type_cito" translatable="false">Cache In Trash Out Event</string>
    <string name="pref_type_wig" translatable="false">Wherigo™ Cache</string>
    <string name="pref_type_virtual" translatable="false">Virtual Cache</string>
    <string name="pref_type_webcam" translatable="false">Webcam Cache</string>
    <string name="pref_type_loc" translatable="false">Locationless (Reverse) Cache</string>
    <string name="pref_type_hq" translatable="false">Groundspeak Headquarters Cache</string>
    <string name="pref_type_gps" translatable="false">GPS Adventures Maze Exhibit</string>
    <string name="pref_type_10years" translatable="false">10 Years! Event Cache</string>
    <string name="pref_type_benchmark" translatable="false">Benchmark Hunting</string>
    <string name="pref_type_ape" translatable="false">Project A.P.E. Cache</string>
    <string name="pref_type_lab" translatable="false">Adventure LAB Cache</string>
    <string name="file_provider_authority" translatable="false">ch.bubendorf.locusaddon.gsakdatabase.provider</string>
    <string name="column_Bearing" translatable="false" tools:keep="@string/column_Bearing">Bearing (NW, SW, etc) from current centre point</string>
    <string name="column_CacheID" translatable="false" tools:keep="@string/column_CacheID">Unique cache ID</string>
    <string name="column_CacheType" translatable="false" tools:keep="@string/column_CacheType">A 1 character" translatable="false">representing the cache type </string>
    <string name="column_Code" translatable="false" tools:keep="@string/column_Code">Unique Waypoint code</string>
    <string name="column_Changed" translatable="false" tools:keep="@string/column_Changed">Date data was actually changed in this waypoint</string>
    <string name="column_Container" translatable="false" tools:keep="@string/column_Container">Container size</string>
    <string name="column_Created" translatable="false" tools:keep="@string/column_Created">Date the waypoint was created in the database</string>
    <string name="column_Degrees" translatable="false" tools:keep="@string/column_Degrees">Bearing in degrees from your current centre point</string>
    <string name="column_Difficulty" translatable="false" tools:keep="@string/column_Difficulty">Difficulty rating</string>
    <string name="column_Distance" translatable="false" tools:keep="@string/column_Distance">Distance from current centre point</string>
    <string name="column_DNF" translatable="false" tools:keep="@string/column_DNF">Cache currently has the DNF flag</string>
    <string name="column_DNFDate" translatable="false" tools:keep="@string/column_DNFDate">Date of most recent DNF</string>
    <string name="column_Elevation" translatable="false" tools:keep="@string/column_Elevation">Elevation (always in meters)</string>
    <string name="column_FavPoints" translatable="false" tools:keep="@string/column_FavPoints">Geocaching.com favorite points</string>
    <string name="column_Found" translatable="false" tools:keep="@string/column_Found">Found Status</string>
    <string name="column_FoundCount" translatable="false" tools:keep="@string/column_FoundCount">Found Count (number of times you have found this cache)</string>
    <string name="column_FoundByMeDate" translatable="false" tools:keep="@string/column_FoundByMeDate">Date of your most recent find for a cache</string>
    <string name="column_FTF" translatable="false" tools:keep="@string/column_FTF">First to find</string>
    <string name="column_GcNote" translatable="false" tools:keep="@string/column_GcNote">Geocaching.com personal note</string>
    <string name="column_Guid" translatable="false" tools:keep="@string/column_Guid">Geocaching.com cache GUID</string>
    <string name="column_HasCorrected" translatable="false" tools:keep="@string/column_HasCorrected">Waypoint has corrected coordinates</string>
    <string name="column_HasTravelBug" translatable="false" tools:keep="@string/column_HasTravelBug">Cache has a travel bug</string>
    <string name="column_HasUserNote" translatable="false" tools:keep="@string/column_HasUserNote">Waypoint has a user note</string>
    <string name="column_Hints" translatable="false" tools:keep="@string/column_Hints">Hints for this cache (decoded)</string>
    <string name="column_IsPremium" translatable="false" tools:keep="@string/column_IsPremium">Geocaching.com member only cache status</string>
    <string name="column_LastFoundDate" translatable="false" tools:keep="@string/column_LastFoundDate">Date the cache was last found (by anybody)</string>
    <string name="column_LastGPXDate" translatable="false" tools:keep="@string/column_LastGPXDate">Date this waypoint was last updated by loading a GPX file</string>
    <string name="column_LastLog" translatable="false" tools:keep="@string/column_LastLog">Date of the last log for this cache (any log)</string>
    <string name="column_LastUserDate" translatable="false" tools:keep="@string/column_LastUserDate">Date this waypoint was last updated manually by any user action</string>
    <string name="column_LatOriginal" translatable="false" tools:keep="@string/column_LatOriginal">Original Latitude (before change by corrected coordinates)</string>
    <string name="column_Latitude" translatable="false" tools:keep="@string/column_Latitude">Latitude in decimal degrees format</string>
    <string name="column_Lock" translatable="false" tools:keep="@string/column_Lock">Waypoint is locked</string>
    <string name="column_LongDescription" translatable="false" tools:keep="@string/column_LongDescription">Cache Long description</string>
    <string name="column_LongHTM" translatable="false" tools:keep="@string/column_LongHTM">Long description contains HTML code</string>
    <string name="column_LonOriginal" translatable="false" tools:keep="@string/column_LonOriginal">Original Longitude (before change by corrected coordinates)</string>
    <string name="column_Longitude" translatable="false" tools:keep="@string/column_Longitude">Longitude in decimal degrees format</string>
    <string name="column_MacroFlag" translatable="false" tools:keep="@string/column_MacroFlag">Macro only "UserFlag"</string>
    <string name="column_MacroSort" translatable="false" tools:keep="@string/column_MacroSort">Internal "macro sort" more information</string>
    <string name="column_Name" translatable="false" tools:keep="@string/column_Name">Waypoint name</string>
</resources>